update the link

--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -49,8 +49,8 @@
                     <p> Click here to view pdf </p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod3</button>
                     </div>
                 </div>
             </div>
@@ -60,9 +60,9 @@
                     <h3>Data Structures And Algorithms</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -75,7 +75,7 @@
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/microprocessor/micro mod 1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/microprocessor/micro 2.pdf')">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/microprocessor/micro 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -86,9 +86,9 @@
                     <h3>Computer Networks</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -99,9 +99,9 @@
                     <h3>Software Engineering</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/computer network/cn mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -112,9 +112,9 @@
                     <h3>Discrete Mathematics</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -125,9 +125,9 @@
                     <h3>English For Professional Purposes - II</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -138,9 +138,9 @@
                     <h3>Data Structures And Algorithms Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -151,9 +151,9 @@
                     <h3>Microprocessors Lab</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -164,9 +164,9 @@
                     <h3>Introduction To Cyber Security</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -179,9 +179,9 @@
                     <h3>Soft Skills - II</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod3</button>
                     </div>
 
                 </div>
