add some link of pdf

--- a/HTML/CS Branch/Third Year/5th_semester.html
+++ b/HTML/CS Branch/Third Year/5th_semester.html
@@ -47,9 +47,9 @@
                     <h3>Machine Learning</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/ML/ml1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/ML/ml2.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/ML/ml1.pdf')">Mod3</button>
                     </div>
                 </div>
             </div>
@@ -72,9 +72,9 @@
                     <h3>Theory Of Automata and Formal Languages</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/tafl/tafl.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/tafl/tafl.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/tafl/tafl.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -124,9 +124,9 @@
                     <h3>Soft Skills </h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/soft skills sem 5/DI sheet 3.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/soft skills sem 5/DI sheet 3.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/soft skills sem 5/DI sheet 3.pdf')">Mod3</button>
                     </div>
 
                 </div>
