update the linksi

--- a/HTML/CS Branch/Third Year/5th_semester.html
+++ b/HTML/CS Branch/Third Year/5th_semester.html
@@ -59,9 +59,9 @@
                     <h3>Big Data Analytics</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Big Data/big data.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Big Data/big data.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Big Data/big data.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -85,9 +85,9 @@
                     <h3>Design Analysis Of Algorithms</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Daa/Daa.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Daa/Daa.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../../../pdf/Daa/Daa.pdf')">Mod3</button>
                     </div>
 
                 </div>
@@ -286,16 +286,16 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="../../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
-                                <a href="#">Third Year</a>
+                                <a href="../3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../4th_year.html">Fourth Year</a>
                             </p>
                         </div>
 
