--- a/HTML/CS Branch/3rd_year.html
+++ b/HTML/CS Branch/3rd_year.html
@@ -258,16 +258,16 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
                                 <a href="#">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../CS Branch/4th_year.html">Fourth Year</a>
                             </p>
                         </div>
 
