--- a/HTML/CS Branch/4th_year.html
+++ b/HTML/CS Branch/4th_year.html
@@ -256,13 +256,13 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
                                 <a href="../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
-                                <a href="">Third Year</a>
+                                <a href="3rd_year.html">Third Year</a>
                             </p>
                             <p>
                                 <a href="#">Fourth Year</a>
