--- a/HTML/CS Branch/Third Year/6th_semester.html
+++ b/HTML/CS Branch/Third Year/6th_semester.html
@@ -286,16 +286,16 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="../../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
-                                <a href="#">Third Year</a>
+                                <a href="../3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../3rd_year.html">Fourth Year</a>
                             </p>
                         </div>
 
