--- a/HTML/firstYear/1st_year.html
+++ b/HTML/firstYear/1st_year.html
@@ -255,13 +255,13 @@
                                 <a href="#">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
-                                <a href="#">Third Year</a>
+                                <a href="../CS Branch/3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../firstYear/1st_year.html">Fourth Year</a>
                             </p>
                         </div>
 
