--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -286,16 +286,16 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../HTML/firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="#">Second Year</a>
                             </p>
                             <p>
-                                <a href="#">Third Year</a>
+                                <a href="../HTML/CS Branch/3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../HTML/CS Branch/4th_year.html">Fourth Year</a>
                             </p>
                         </div>
 
