made minor changes

--- a/HTML/CS Branch/4th_year.html
+++ b/HTML/CS Branch/4th_year.html
@@ -65,7 +65,7 @@
                             aria-expanded="false" aria-controls="collapseExample">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='Fouth Year/7th_semester.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='Fourth Year/7th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -141,7 +141,7 @@
                             aria-expanded="false" aria-controls="collapseExample2">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='Fouth Year/8th_semester.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='Fourth Year/8th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -150,25 +150,25 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    >Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
-                                    role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="Fouth Year/8th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    >Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
+                                    role="tab">Enter The Subject</a>r
+                                <a class="list-group-item list-group-item-action"  href="Fourth Year/8th_semester.html"
                                     role="tab">Enter The Subject</a>
                                 
                             </div>
