--- a/HTML/firstYear/1st_semester.html
+++ b/HTML/firstYear/1st_semester.html
@@ -247,7 +247,7 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
                                 <a href="../../secondyear/secondYear.html">Second Year</a>
