--- a/HTML/firstYear/1st_year.html
+++ b/HTML/firstYear/1st_year.html
@@ -261,7 +261,7 @@
                                 <a href="../CS Branch/3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="../firstYear/1st_year.html">Fourth Year</a>
+                                <a href="../CS Branch/4th_year.html">Fourth Year</a>
                             </p>
                         </div>
 
