--- a/HTML/CS Branch/Fourth Year/8th_semester.html
+++ b/HTML/CS Branch/Fourth Year/8th_semester.html
@@ -27,6 +27,21 @@
 
 
     <div class="container">
+
+
+        <div class="row">
+            <ol class="col-12 breadcrumb"  style="background-color: darkslategrey;">
+                <li class="breadcrumb-item"><a href="http://localhost/Edu_Hub/">Home</a></li>
+                <li class="breadcrumb-item"><a href="../4th_year.html">Fourth Year</a></li>
+                <li class="breadcrumb-item active" style="color: white;">Semester 8</li>
+            </ol>
+            <div class="col-12">
+                <h3>Semester-8</h3>
+                <hr>
+            </div>
+        </div>
+
+
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-1">
@@ -275,16 +290,16 @@
 
                         <div class="products">
                             <p>
-                                <a href="#">First Year</a>
+                                <a href="../../firstYear/1st_year.html">First Year</a>
                             </p>
                             <p>
-                                <a href="HTML/secondPage.html">Second Year</a>
+                                <a href="../../../secondyear/secondYear.html">Second Year</a>
                             </p>
                             <p>
-                                <a href="#">Third Year</a>
+                                <a href="../3rd_year.html">Third Year</a>
                             </p>
                             <p>
-                                <a href="#">Fourth Year</a>
+                                <a href="../4th_year.html">Fourth Year</a>
                             </p>
                         </div>
 
